[gd_scene load_steps=15 format=3 uid="uid://do4b2ycjlnihh"]

[ext_resource type="Theme" uid="uid://xsa27kd56ymp" path="res://assets/obstacles.tres" id="1_13b6s"]
[ext_resource type="Texture2D" uid="uid://xo2uxd08hbs5" path="res://sprites/obstacles/icons/rock_0.png" id="2_hik1w"]
[ext_resource type="Script" path="res://scripts/obstacles/obstacle_button.gd" id="2_mrm58"]
[ext_resource type="Texture2D" uid="uid://dyumyfuglil" path="res://sprites/obstacles/icons/stick_0.png" id="3_r8qms"]
[ext_resource type="Texture2D" uid="uid://ckfguswxyiy7x" path="res://sprites/obstacles/icons/stick_1.png" id="5_fonj3"]
[ext_resource type="Texture2D" uid="uid://cpdkjoskbofoi" path="res://sprites/obstacles/rock_0.png" id="5_lgnyc"]
[ext_resource type="Texture2D" uid="uid://n1rt8i0fowil" path="res://sprites/obstacles/stick_0.png" id="6_fs1mx"]
[ext_resource type="Texture2D" uid="uid://dcdrdbpo1hebx" path="res://sprites/obstacles/icons/rock_1.png" id="7_e37yx"]
[ext_resource type="Texture2D" uid="uid://cxciqokbsnk3j" path="res://sprites/obstacles/stick_1.png" id="7_wy3es"]
[ext_resource type="Texture2D" uid="uid://bhgjxwqgg4hyp" path="res://sprites/obstacles/icons/rock_2.png" id="8_dsvgy"]
[ext_resource type="Texture2D" uid="uid://cxnn3f8snt0b5" path="res://sprites/obstacles/rock_1.png" id="9_ll5jp"]
[ext_resource type="Texture2D" uid="uid://dkhmkpgafj3cx" path="res://sprites/obstacles/rock_2.png" id="10_rewyq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yfpv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hik1w")
}],
"loop": true,
"name": &"rock_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_e37yx")
}],
"loop": true,
"name": &"rock_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_dsvgy")
}],
"loop": true,
"name": &"rock_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_r8qms")
}],
"loop": true,
"name": &"stick_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_fonj3")
}],
"loop": true,
"name": &"stick_1",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_708ye"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_lgnyc")
}],
"loop": true,
"name": &"rock_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ll5jp")
}],
"loop": true,
"name": &"rock_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_rewyq")
}],
"loop": true,
"name": &"rock_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fs1mx")
}],
"loop": true,
"name": &"stick_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_wy3es")
}],
"loop": true,
"name": &"stick_1",
"speed": 5.0
}]

[node name="obstacle_button" type="Button" node_paths=PackedStringArray("icon_sprite", "preview_sprite")]
custom_minimum_size = Vector2(36, 36)
theme = ExtResource("1_13b6s")
icon_alignment = 1
script = ExtResource("2_mrm58")
max_move_distance = 15
rotation_step_size = 15
icon_sprite = NodePath("icon")
preview_sprite = NodePath("preview")

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(18, 18)
sprite_frames = SubResource("SpriteFrames_yfpv8")
animation = &"rock_1"

[node name="preview" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(18, 18)
sprite_frames = SubResource("SpriteFrames_708ye")
animation = &"rock_1"

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
